--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@ email: do.q.truong [at] gmail.com
   #line in _config.yml. It will appear in your document head meta (for
   #Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://truongdq.com" # the base hostname & protocol for your site
+url: "http://truongdo.com" # the base hostname & protocol for your site
 twitter_username: truongdq54
-github_username:  truongdq
+github_username:  truongdo
 
 # Build settings
 markdown: kramdown
