--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ gems:
     - jekyll-seo-tag
 # Site settings
 title: Do Quoc Truong
-email: truongdo [at] vaisgmail.com
+email: truongdo@vais.vn
 #description: > # this means to ignore newlines until "baseurl:"
   #Write an awesome description for your new site here. You can edit this
   #line in _config.yml. It will appear in your document head meta (for
